fix: update z-index and pointer-events for shelf components

--- a/src/assets/scss/components/_page-style.scss
+++ b/src/assets/scss/components/_page-style.scss
@@ -88,7 +88,7 @@
         left: 0;
         right: 0;
         bottom: -1rem;
-        z-index: 1;
+        z-index: 3;
         width: 100%;
         padding-inline: 2.25rem;
         pointer-events: none;
